; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_xgmac.c_rx_fifo_hwm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_xgmac.c_rx_fifo_hwm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAC_RXFIFO_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @rx_fifo_hwm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rx_fifo_hwm(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @MAC_RXFIFO_SIZE, align 4
  %5 = load i32, i32* %2, align 4
  %6 = mul nsw i32 3, %5
  %7 = sub nsw i32 %4, %6
  %8 = load i32, i32* @MAC_RXFIFO_SIZE, align 4
  %9 = mul nsw i32 %8, 38
  %10 = sdiv i32 %9, 100
  %11 = call i32 @max(i32 %7, i32 %10)
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @MAC_RXFIFO_SIZE, align 4
  %14 = sub nsw i32 %13, 8192
  %15 = call i32 @min(i32 %12, i32 %14)
  ret i32 %15
}

declare dso_local i32 @max(i32, i32) #1

declare dso_local i32 @min(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
